tests/snapshots/runreport__summary-baseline.snap
---
source: tests/runreport.rs
expression: summary
---
stilltrue: summary (complete)
  documents   1 matched · 1 read · 0 unreadable
  claims      1 extracted · 0 ignored · 0 true · 1 broken · 0 skipped · 0 ambiguous
  gate        1 rot · 0 lie reported · 0 lie not reported · 0 abstained · 0 history failed
  baseline    1 suppressed
  history     complete · 1 searches · 4 git processes
stilltrue: No reportable rot. Checked 1 document(s); 1 finding(s) were suppressed by the baseline.
